# SemiProject

./: .env  book_kakao.json  book_kakao_cleaned.csv  book_kakao_cleaned.json  docker-compose.yml  package-lock.json  package.json  render.yaml  작업 진행 시 참고 사항.txt  파일구조.txt
backend/: .env  crud.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  seed.py  test.db
backend/routers/: books.py  qna.py
frontend/: Dockerfile
frontend/src/: .env  App.css  App.jsx  index.css  mokup.jsx
frontend/src/api/: config.js
frontend/src/components/: QnaComments.jsx  QnaForm.jsx  QnaList.jsx  QnaSetDate.js  SearchResultList.jsx  footer.jsx  header.jsx  reviewform.jsx  reviewlist.jsx  tab.jsx
frontend/src/pages/: booksdetail.jsx  home.jsx
